--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lerycs">
+        <activity android:name=".ArtistsListActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.moringaschool.lerycs.MainActivity"></meta-data>
+        </activity>
         <activity android:name=".MusicListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.lerycs.MainActivity">
-            </meta-data>
+                android:value="com.moringaschool.lerycs.MainActivity"></meta-data>
         </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
