--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
                 android:value="com.moringaschool.lerycs.MainActivity"></meta-data>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
