--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.lerycs.MainActivity"></meta-data>
         </activity>
-        <activity android:name=".MusicListActivity">
+        <activity android:name=".ui.MusicListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.moringaschool.lerycs.MainActivity"></meta-data>
