--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.moringaschool.news">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -11,18 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lerycs">
-        <activity android:name="com.moringaschool.news.ArtistsListActivity">
-            <eta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.news.ui.MainActivity"/>
-        </activity>
-        <activity android:name="com.moringaschool.news.ui.MusicListActivity">
+        <activity android:name=".ui.ArticleDetailActivity"></activity>
+        <activity android:name=".ui.ArticleListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.moringaschool.news.ui.MainActivity"/>
+                android:value="com.moringaschool.news.ui.MainActivity" />
         </activity>
-        <activity
-            android:name="com.moringaschool.news.ui.MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
