--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Lerycs">
-        <activity android:name=".ui.ArticleDetailActivity"></activity>
+        <activity android:name=".ui.ArticleDetailActivity"/>
         <activity android:name=".ui.ArticleListActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
