--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Lerycs">
-        <activity android:name=".ui.CreateActivity"></activity>
-        <activity android:name=".ui.LoginActivity" />
+        android:theme="@style/Theme.News">
+        <activity android:name=".ui.CreateActivity" />
+        <activity android:name=".ui.LoginActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".ui.ArticleDetailActivity" />
         <activity android:name=".ui.ArticleListActivity">
             <meta-data
@@ -20,11 +26,7 @@
                 android:value="com.moringaschool.news.ui.MainActivity" />
         </activity>
         <activity android:name=".ui.MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
